@@ -1,3 +1,5 @@
+* Update to OCaml 4.06 and up (issue #6)
+
 CamlIDL 1.06:
 -------------
 
